devel/ultimatepp/files/logs
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm: In static member function 'static void Upp::Ctrl::GetWorkArea(Upp::Array<Upp::Rect_<int> >&)':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:321:32: error: conversion from 'NSRect' to non-scalar type 'CGRect' requested
  321 |                 CGRect frame = [screen visibleFrame];
      |                                ^~~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm: In static member function 'static Upp::Rect Upp::Ctrl::GetVirtualScreenArea()':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:347:32: error: conversion from 'NSRect' to non-scalar type 'CGRect' requested
  347 |                 CGRect frame = [screen frame];
      |                                ^~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm: In static member function 'static Upp::Rect Upp::Ctrl::GetScreenArea(Upp::Point)':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:371:32: error: conversion from 'NSRect' to non-scalar type 'CGRect' requested
  371 |                 CGRect frame = [screen frame];
      |                                ^~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm: In static member function 'static Upp::Rect Upp::Ctrl::GetPrimaryScreenArea()':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:384:32: error: conversion from 'NSRect' to non-scalar type 'CGRect' requested
  384 |                 CGRect frame = [screen frame];
      |                                ^~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm: In static member function 'static void Upp::MMCtrl::SyncRect(CocoView*)':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:420:55: error: could not convert 'contentRect' from 'NSRect' to 'CGRect'
  420 |         view->ctrl->SetWndRect(MakeScreenRect(screen, contentRect));
      |                                                       ^~~~~~~~~~~
      |                                                       |
      |                                                       NSRect
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm: In constructor 'Upp::TopFrameDraw::TopFrameDraw(Upp::Ctrl*, const Upp::Rect&)':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:430:27: warning: 'NSGraphicsContext' may not respond to '-CGContext'
  430 |         Init([gc CGContext], NULL);
      |                           ^
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:430:27: warning: (messages without a matching method signature will be assumed to return 'id' and accept '...' as arguments)
BmpReg.icpp
CtrlCore: 2 file(s) built in (0:13.67), 6836 msecs / file
In file included from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/Bmp.cpp:5,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/.home/.cache/upp.out/plugin/bmp/GCC.Blitz.Gui.Shared/plugin/bmp$blitz.cpp:3:
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h: In member function 'void Upp::BMP_FILEHEADER::SwapEndian()':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:18:33: error: cannot bind packed field '((Upp::BMP_FILEHEADER*)this)->Upp::BMP_FILEHEADER::bfType' to 'Upp::word&' {aka 'short unsigned int&'}
   18 |                 Upp::EndianSwap(bfType);
      |                                 ^~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:19:33: error: cannot bind packed field '((Upp::BMP_FILEHEADER*)this)->Upp::BMP_FILEHEADER::bfSize' to 'Upp::dword&' {aka 'unsigned int&'}
   19 |                 Upp::EndianSwap(bfSize);
      |                                 ^~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:20:33: error: cannot bind packed field '((Upp::BMP_FILEHEADER*)this)->Upp::BMP_FILEHEADER::bfOffBits' to 'Upp::dword&' {aka 'unsigned int&'}
   20 |                 Upp::EndianSwap(bfOffBits);
      |                                 ^~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h: In member function 'void Upp::BMP_INFOHEADER::SwapEndian()':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:46:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biSize' to 'Upp::dword&' {aka 'unsigned int&'}
   46 |                 Upp::EndianSwap(biSize);
      |                                 ^~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:47:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biWidth' to 'int&'
   47 |                 Upp::EndianSwap(biWidth);
      |                                 ^~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:48:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biHeight' to 'int&'
   48 |                 Upp::EndianSwap(biHeight);
      |                                 ^~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:49:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biPlanes' to 'Upp::word&' {aka 'short unsigned int&'}
   49 |                 Upp::EndianSwap(biPlanes);
      |                                 ^~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:50:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biBitCount' to 'Upp::word&' {aka 'short unsigned int&'}
   50 |                 Upp::EndianSwap(biBitCount);
      |                                 ^~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:51:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biCompression' to 'Upp::dword&' {aka 'unsigned int&'}
   51 |                 Upp::EndianSwap(biCompression);
      |                                 ^~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:52:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biSizeImage' to 'Upp::dword&' {aka 'unsigned int&'}
   52 |                 Upp::EndianSwap(biSizeImage);
      |                                 ^~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:53:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biXPelsPerMeter' to 'int&'
   53 |                 Upp::EndianSwap(biXPelsPerMeter);
      |                                 ^~~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:54:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biYPelsPerMeter' to 'int&'
   54 |                 Upp::EndianSwap(biYPelsPerMeter);
      |                                 ^~~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:55:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biClrUsed' to 'Upp::dword&' {aka 'unsigned int&'}
   55 |                 Upp::EndianSwap(biClrUsed);
      |                                 ^~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/plugin/bmp/bmphdr.h:56:33: error: cannot bind packed field '((Upp::BMP_INFOHEADER*)this)->Upp::BMP_INFOHEADER::biClrImportant' to 'Upp::dword&' {aka 'unsigned int&'}
   56 |                 Upp::EndianSwap(biClrImportant);
      |                                 ^~~~~~~~~~~~~~
plugin/bmp: 4 file(s) built in (0:08.39), 2097 msecs / file

There were errors. (0:24.36)
Command failed: CXX=/opt/local/bin/g++-mp-14 ./umk ./uppsrc ide GCC -brs ./theide
Exit code: 1
